smart-frontend/app/src/utils/smartRule/SmartRuleParser.ts
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Generated from SmartRule.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import SmartRuleListener from "./SmartRuleListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class SmartRuleParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly OPEQ = 23;
	public static readonly OPCMP = 24;
	public static readonly OBJECTTYPE = 25;
	public static readonly AT = 26;
	public static readonly AND = 27;
	public static readonly EVERY = 28;
	public static readonly FROM = 29;
	public static readonly ON = 30;
	public static readonly ONCE = 31;
	public static readonly OR = 32;
	public static readonly NOW = 33;
	public static readonly NOT = 34;
	public static readonly TO = 35;
	public static readonly WITH = 36;
	public static readonly MATCHES = 37;
	public static readonly FILECREATE = 38;
	public static readonly FILECLOSE = 39;
	public static readonly FILEAPPEND = 40;
	public static readonly FILERENAME = 41;
	public static readonly FILEMETADATA = 42;
	public static readonly FILEUNLINK = 43;
	public static readonly FILETRUNCATE = 44;
	public static readonly TIMEINTVALCONST = 45;
	public static readonly TIMEPOINTCONST = 46;
	public static readonly ID = 47;
	public static readonly Linecomment = 48;
	public static readonly WS = 49;
	public static readonly STRING = 50;
	public static readonly LONG = 51;
	public static readonly NEWLINE = 52;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_ssmrule = 0;
	public static readonly RULE_object = 1;
	public static readonly RULE_trigger = 2;
	public static readonly RULE_duringexpr = 3;
	public static readonly RULE_objfilter = 4;
	public static readonly RULE_conditions = 5;
	public static readonly RULE_boolvalue = 6;
	public static readonly RULE_compareexpr = 7;
	public static readonly RULE_timeintvalexpr = 8;
	public static readonly RULE_timepointexpr = 9;
	public static readonly RULE_commonexpr = 10;
	public static readonly RULE_numricexpr = 11;
	public static readonly RULE_stringexpr = 12;
	public static readonly RULE_cmdlet = 13;
	public static readonly RULE_id = 14;
	public static readonly RULE_fileEvent = 15;
	public static readonly RULE_constexpr = 16;
	public static readonly literalNames: (string | null)[] = [ null, "':'", 
                                                            "'|'", "'/'", 
                                                            "'('", "')'", 
                                                            "'-'", "'+'", 
                                                            "'*'", "'%'", 
                                                            "';'", "'@'", 
                                                            "'$'", "'&'", 
                                                            "'='", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "'\"'", 
                                                            "'?'", "'.'", 
                                                            "','", null, 
                                                            null, null, 
                                                            "'at'", "'and'", 
                                                            "'every'", "'from'", 
                                                            "'on'", "'once'", 
                                                            "'or'", "'now'", 
                                                            "'not'", "'to'", 
                                                            "'with'", "'matches'", 
                                                            "'FileCreate'", 
                                                            "'FileClose'", 
                                                            "'FileAppend'", 
                                                            "'FileRename'", 
                                                            "'FileMetadate'", 
                                                            "'FileUnlink'", 
                                                            "'FileTruncate'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "OPEQ", 
                                                             "OPCMP", "OBJECTTYPE", 
                                                             "AT", "AND", 
                                                             "EVERY", "FROM", 
                                                             "ON", "ONCE", 
                                                             "OR", "NOW", 
                                                             "NOT", "TO", 
                                                             "WITH", "MATCHES", 
                                                             "FILECREATE", 
                                                             "FILECLOSE", 
                                                             "FILEAPPEND", 
                                                             "FILERENAME", 
                                                             "FILEMETADATA", 
                                                             "FILEUNLINK", 
                                                             "FILETRUNCATE", 
                                                             "TIMEINTVALCONST", 
                                                             "TIMEPOINTCONST", 
                                                             "ID", "Linecomment", 
                                                             "WS", "STRING", 
                                                             "LONG", "NEWLINE" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"ssmrule", "object", "trigger", "duringexpr", "objfilter", "conditions", 
		"boolvalue", "compareexpr", "timeintvalexpr", "timepointexpr", "commonexpr", 
		"numricexpr", "stringexpr", "cmdlet", "id", "fileEvent", "constexpr",
	];
	public get grammarFileName(): string { return "SmartRule.g4"; }
	public get literalNames(): (string | null)[] { return SmartRuleParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return SmartRuleParser.symbolicNames; }
	public get ruleNames(): string[] { return SmartRuleParser.ruleNames; }
	public get serializedATN(): number[] { return SmartRuleParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, SmartRuleParser._ATN, SmartRuleParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public ssmrule(): SsmruleContext {
		let localctx: SsmruleContext = new SsmruleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, SmartRuleParser.RULE_ssmrule);
		let _la: number;
		try {
			this.state = 50;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 25:
				localctx = new RuleLineContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 34;
				this.object();
				this.state = 35;
				this.match(SmartRuleParser.T__0);
				this.state = 39;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 3556769792) !== 0)) {
					{
					this.state = 36;
					this.trigger();
					this.state = 37;
					this.match(SmartRuleParser.T__1);
					}
				}

				this.state = 41;
				this.conditions();
				this.state = 42;
				this.match(SmartRuleParser.T__1);
				this.state = 43;
				this.cmdlet();
				}
				break;
			case 48:
				localctx = new CommentLineContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 46;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 45;
					this.match(SmartRuleParser.Linecomment);
					}
					}
					this.state = 48;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===48);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public object(): ObjectContext {
		let localctx: ObjectContext = new ObjectContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, SmartRuleParser.RULE_object);
		try {
			this.state = 56;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				localctx = new ObjTypeOnlyContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 52;
				this.match(SmartRuleParser.OBJECTTYPE);
				}
				break;
			case 2:
				localctx = new ObjTypeWithContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 53;
				this.match(SmartRuleParser.OBJECTTYPE);
				this.state = 54;
				this.match(SmartRuleParser.WITH);
				this.state = 55;
				this.objfilter();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public trigger(): TriggerContext {
		let localctx: TriggerContext = new TriggerContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, SmartRuleParser.RULE_trigger);
		let _la: number;
		try {
			this.state = 79;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 26:
				localctx = new TriTimePointContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 58;
				this.match(SmartRuleParser.AT);
				this.state = 59;
				this.timepointexpr(0);
				}
				break;
			case 28:
				localctx = new TriCycleContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 60;
				this.match(SmartRuleParser.EVERY);
				this.state = 61;
				this.timeintvalexpr(0);
				this.state = 68;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===3) {
					{
					this.state = 62;
					this.match(SmartRuleParser.T__2);
					this.state = 63;
					this.timeintvalexpr(0);
					this.state = 66;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===3) {
						{
						this.state = 64;
						this.match(SmartRuleParser.T__2);
						this.state = 65;
						this.timeintvalexpr(0);
						}
					}

					}
				}

				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===29) {
					{
					this.state = 70;
					this.duringexpr();
					}
				}

				}
				break;
			case 30:
				localctx = new TriFileEventContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 73;
				this.match(SmartRuleParser.ON);
				this.state = 74;
				this.fileEvent();
				this.state = 76;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===29) {
					{
					this.state = 75;
					this.duringexpr();
					}
				}

				}
				break;
			case 31:
				localctx = new TriOnceContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 78;
				this.match(SmartRuleParser.ONCE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public duringexpr(): DuringexprContext {
		let localctx: DuringexprContext = new DuringexprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, SmartRuleParser.RULE_duringexpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 81;
			this.match(SmartRuleParser.FROM);
			this.state = 82;
			this.timepointexpr(0);
			this.state = 85;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===35) {
				{
				this.state = 83;
				this.match(SmartRuleParser.TO);
				this.state = 84;
				this.timepointexpr(0);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public objfilter(): ObjfilterContext {
		let localctx: ObjfilterContext = new ObjfilterContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, SmartRuleParser.RULE_objfilter);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 87;
			this.boolvalue(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public conditions(): ConditionsContext {
		let localctx: ConditionsContext = new ConditionsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, SmartRuleParser.RULE_conditions);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 89;
			this.boolvalue(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public boolvalue(): BoolvalueContext;
	public boolvalue(_p: number): BoolvalueContext;
	// @RuleVersion(0)
	public boolvalue(_p?: number): BoolvalueContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: BoolvalueContext = new BoolvalueContext(this, this._ctx, _parentState);
		let _prevctx: BoolvalueContext = localctx;
		let _startState: number = 12;
		this.enterRecursionRule(localctx, 12, SmartRuleParser.RULE_boolvalue, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 100;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				localctx = new BvCompareexprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 92;
				this.compareexpr();
				}
				break;
			case 2:
				{
				localctx = new BvNotContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 93;
				this.match(SmartRuleParser.NOT);
				this.state = 94;
				this.boolvalue(4);
				}
				break;
			case 3:
				{
				localctx = new BvIdContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 95;
				this.id();
				}
				break;
			case 4:
				{
				localctx = new BvCurveContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 96;
				this.match(SmartRuleParser.T__3);
				this.state = 97;
				this.boolvalue(0);
				this.state = 98;
				this.match(SmartRuleParser.T__4);
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 107;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new BvAndORContext(this, new BoolvalueContext(this, _parentctx, _parentState));
					this.pushNewRecursionContext(localctx, _startState, SmartRuleParser.RULE_boolvalue);
					this.state = 102;
					if (!(this.precpred(this._ctx, 3))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
					}
					this.state = 103;
					_la = this._input.LA(1);
					if(!(_la===27 || _la===32)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					this.state = 104;
					this.boolvalue(4);
					}
					}
				}
				this.state = 109;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public compareexpr(): CompareexprContext {
		let localctx: CompareexprContext = new CompareexprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, SmartRuleParser.RULE_compareexpr);
		try {
			this.state = 142;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				localctx = new CmpIdLongContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 110;
				this.numricexpr(0);
				this.state = 111;
				this.match(SmartRuleParser.OPCMP);
				this.state = 112;
				this.numricexpr(0);
				}
				break;
			case 2:
				localctx = new CmpEqIdLongContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 114;
				this.numricexpr(0);
				this.state = 115;
				this.match(SmartRuleParser.OPEQ);
				this.state = 116;
				this.numricexpr(0);
				}
				break;
			case 3:
				localctx = new CmpIdStringContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 118;
				this.stringexpr(0);
				this.state = 119;
				this.match(SmartRuleParser.OPEQ);
				this.state = 120;
				this.stringexpr(0);
				}
				break;
			case 4:
				localctx = new CmpIdStringMatchesContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 122;
				this.stringexpr(0);
				this.state = 123;
				this.match(SmartRuleParser.MATCHES);
				this.state = 124;
				this.stringexpr(0);
				}
				break;
			case 5:
				localctx = new CmpTimeintvalTimeintvalContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 126;
				this.timeintvalexpr(0);
				this.state = 127;
				this.match(SmartRuleParser.OPCMP);
				this.state = 128;
				this.timeintvalexpr(0);
				}
				break;
			case 6:
				localctx = new CmpEqTimeintvalTimeintvalContext(this, localctx);
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 130;
				this.timeintvalexpr(0);
				this.state = 131;
				this.match(SmartRuleParser.OPEQ);
				this.state = 132;
				this.timeintvalexpr(0);
				}
				break;
			case 7:
				localctx = new CmpTimepointTimePointContext(this, localctx);
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 134;
				this.timepointexpr(0);
				this.state = 135;
				this.match(SmartRuleParser.OPCMP);
				this.state = 136;
				this.timepointexpr(0);
				}
				break;
			case 8:
				localctx = new CmpEqTimepointTimePointContext(this, localctx);
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 138;
				this.timepointexpr(0);
				this.state = 139;
				this.match(SmartRuleParser.OPEQ);
				this.state = 140;
				this.timepointexpr(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public timeintvalexpr(): TimeintvalexprContext;
	public timeintvalexpr(_p: number): TimeintvalexprContext;
	// @RuleVersion(0)
	public timeintvalexpr(_p?: number): TimeintvalexprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: TimeintvalexprContext = new TimeintvalexprContext(this, this._ctx, _parentState);
		let _prevctx: TimeintvalexprContext = localctx;
		let _startState: number = 16;
		this.enterRecursionRule(localctx, 16, SmartRuleParser.RULE_timeintvalexpr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 155;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				{
				localctx = new TieCurvesContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 145;
				this.match(SmartRuleParser.T__3);
				this.state = 146;
				this.timeintvalexpr(0);
				this.state = 147;
				this.match(SmartRuleParser.T__4);
				}
				break;
			case 2:
				{
				localctx = new TieConstContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 149;
				this.match(SmartRuleParser.TIMEINTVALCONST);
				}
				break;
			case 3:
				{
				localctx = new TieTpExprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 150;
				this.timepointexpr(0);
				this.state = 151;
				this.match(SmartRuleParser.T__5);
				this.state = 152;
				this.timepointexpr(0);
				}
				break;
			case 4:
				{
				localctx = new TieTiIdExprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 154;
				this.id();
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 162;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new TieTiExprContext(this, new TimeintvalexprContext(this, _parentctx, _parentState));
					this.pushNewRecursionContext(localctx, _startState, SmartRuleParser.RULE_timeintvalexpr);
					this.state = 157;
					if (!(this.precpred(this._ctx, 2))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
					}
					this.state = 158;
					_la = this._input.LA(1);
					if(!(_la===6 || _la===7)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					this.state = 159;
					this.timeintvalexpr(3);
					}
					}
				}
				this.state = 164;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}

	public timepointexpr(): TimepointexprContext;
	public timepointexpr(_p: number): TimepointexprContext;
	// @RuleVersion(0)
	public timepointexpr(_p?: number): TimepointexprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: TimepointexprContext = new TimepointexprContext(this, this._ctx, _parentState);
		let _prevctx: TimepointexprContext = localctx;
		let _startState: number = 18;
		this.enterRecursionRule(localctx, 18, SmartRuleParser.RULE_timepointexpr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 173;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 4:
				{
				localctx = new TpeCurvesContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
